# game-clock

./: LICENSE  README.org  sdkconfig
idf/: .dir-locals.el  sdkconfig  sdkconfig.old
idf/main/: CMakeLists.txt  ILI9341_ESP32.cpp  ILI9341_ESP32.h  cyd.hpp  idf_component.yml  main.cpp  ui.cpp
main/: cyd.hpp  gpio_example_main.c  main.cpp
sim/: .dir-locals.el  CMakeLists.txt  lvgl  setup-cmake.sh
sim/game-clock/: main.c  ui.cpp  ui.h
